@@ -558,6 +558,7 @@ int xrddefault_save_state_information(void) {
 		fprintf(fp, "triggered_by=%lu\n", temp_downtime->triggered_by);
 		fprintf(fp, "fixed=%d\n", temp_downtime->fixed);
 		fprintf(fp, "duration=%lu\n", temp_downtime->duration);
+		fprintf(fp, "is_in_effect=%d\n", temp_downtime->is_in_effect);
 		fprintf(fp, "author=%s\n", temp_downtime->author);
 		fprintf(fp, "comment=%s\n", temp_downtime->comment);
 		fprintf(fp, "}\n");
@@ -656,6 +657,7 @@ int xrddefault_read_state_information(void) {
 	struct timeval tv[2];
 	double runtime[2];
 	int found_directive = FALSE;
+	int is_in_effect = FALSE;
 
 
 	log_debug_info(DEBUGL_FUNCTIONS, 0, "xrddefault_read_state_information() start\n");
@@ -960,9 +962,9 @@ int xrddefault_read_state_information(void) {
 
 					/* add the downtime */
 					if(data_type == XRDDEFAULT_HOSTDOWNTIME_DATA)
-						add_host_downtime(host_name, entry_time, author, comment_data, start_time, end_time, fixed, triggered_by, duration, downtime_id);
+						add_host_downtime(host_name, entry_time, author, comment_data, start_time, end_time, fixed, triggered_by, duration, downtime_id, is_in_effect);
 					else
-						add_service_downtime(host_name, service_description, entry_time, author, comment_data, start_time, end_time, fixed, triggered_by, duration, downtime_id);
+						add_service_downtime(host_name, service_description, entry_time, author, comment_data, start_time, end_time, fixed, triggered_by, duration, downtime_id, is_in_effect);
 
 					/* must register the downtime with Nagios so it can schedule it, add comments, etc. */
 					register_downtime((data_type == XRDDEFAULT_HOSTDOWNTIME_DATA) ? HOST_DOWNTIME : SERVICE_DOWNTIME, downtime_id);
@@ -1834,6 +1836,8 @@ int xrddefault_read_state_information(void) {
 						fixed = (atoi(val) > 0) ? TRUE : FALSE;
 					else if(!strcmp(var, "triggered_by"))
 						triggered_by = strtoul(val, NULL, 10);
+					else if(!strcmp(var, "is_in_effect"))
+						is_in_effect = (atoi(val) > 0) ? TRUE : FALSE;
 					else if(!strcmp(var, "duration"))
 						duration = strtoul(val, NULL, 10);
 					else if(!strcmp(var, "author"))
